...
    mapOf(
        BottomNavItem.Dashboard.route to "Dashboard",
        "transaction_list?initialTab={initialTab}" to "All Transactions",
        BottomNavItem.Reports.route to "Reports",
        BottomNavItem.Profile.route to "Profile",
        "settings_screen" to "App Settings",
        "add_transaction" to "Add Transaction",
        "transaction_detail/{transactionId}" to "Edit Transaction",
        "account_list" to "Your Accounts",
        "add_account" to "Add New Account",
        "edit_account/{accountId}" to "Edit Account",
        "account_detail/{accountId}" to "Account Details",
        "goal_screen" to "Savings Goals",
...
